fix spacing

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -65,7 +65,7 @@
 
 [class*="col-"] {
   float: left;
-  padding: 0.938em;
+  padding: 1.5em 0.938em 0.938em 0.938em;
   // border: 0.063em solid black;
 }
 
